fix: Changes from .txt format to .json the file which saves the last dates of the news to avoid the duplicate events